Wed Mar 11 17:26:38 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/Win32API.rb: call by :stdcall as default.
	  [ruby-core:22826]

Wed Mar 11 13:27:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stack_type): uses VALUE which is able to be stored
	  parser stack.

Wed Mar 11 13:22:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (init_env): set TMPDIR if none of TMPDIR, TMP,
	  TEMP is set.

	* win32/win32.c (rb_w32_telldir, rb_w32_seekdir): should use long,
	  as defined by SUSv3.

Wed Mar 11 13:03:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_sym): fixed heap corruption.
	  [ruby-core:22822]

Wed Mar 11 06:12:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): expands libpath and removes
	  last /lib.

Wed Mar 11 04:47:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_to_i, time_hash): time_t may be bigger than long
	  and int.

	* time.c (time_timeval, rb_time_timeval, obj2nsec, time_strftime),
	  (time_mdump, time_mload): suppress warnings.

	* win32/Makefile.sub (config.h): added TIMET2NUM and NUM2TIMET.

Wed Mar 11 04:29:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c: suppress warnings.  based on a patch from Charlie
	  Savage at [ruby-core:22804].

Wed Mar 11 04:22:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (sig_trap): suppress warnings.

Tue Mar 10 20:07:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (WARNFLAGS): uses -wd4996 instead of
	  CRTDEFFLAGS.  cf. [ruby-core:22725]

Tue Mar 10 19:58:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (strcasecmp, strncasecmp): use _ prefixed
	  versions to suppress warnings.

	* ext/dl/callback/mkcallback.rb (DLTYPE[FLOAT]): cast to suppress
	  warnings.  [ruby-core:22792]

	* array.c, bignum.c, gc.c, numeric.c, string.c, util.c, insns.def,
	  missing/crypt.c, missing/vsnprintf.c, : suppress warnings.