@@ -1,3 +1,8 @@
+Wed Mar 11 20:13:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/dl/handle.c (rb_dlhandle_sym): RTLD_NEXT is not for symbol
+	  name.   [ruby-dev:38150]
+
 Wed Mar 11 17:26:38 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/dl/win32/lib/Win32API.rb: call by :stdcall as default.
